fix small css layout issue.

--- a/src/components/app/index.scss
+++ b/src/components/app/index.scss
@@ -87,7 +87,7 @@
   }
 
   > .earth {
-    z-index: 1000;
+    z-index: 500;
     height: 24px;
     display: -webkit-box;
     display: -moz-box;
